# pokedex

./: Cargo.toml  Jenkinsfile
resources/: database.sqlite
src/: main.rs
src/api/: create_pokemon.rs  health.rs  mod.rs
src/cli/: create_pokemon.rs  delete_pokemon.rs  fetch_all_pokemons.rs  mod.rs
src/domain/: create_pokemon.rs  delete_pokemon.rs  entities.rs  fetch_all_pokemons.rs  fetch_pokemon.rs  mod.rs  rust.code-workspace
src/repositories/: pokemon.rs
