[package]
name = "pokedex"
version = "0.1.0"
authors = ["Alexis Lozano <alexis.pascal.lozano@gmail.com>","Fabricio Doi <fabricio.doi@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rouille = "3.2.1"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
clap = { version = "4.3.2", features = ["derive"] }
dialoguer = "0.10.4"
